--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
     <div class="signUp">
         <div class="column">
             <h3>Call to action! it's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
+            <p class="p">Sign up for our product by clicking that button right over there!</p>
         </div>
         <button class="button">Sign up</button>
     </div>
     
-    <footer>Copyright Yo 2021</footer>
+    <footer>Copyright <a href="https://github.com/rUpertuwu?tab=repositories">Franco Venezia</a> 2021</footer>
 
 </body>
 </html>
